--- a/views/login.templ
+++ b/views/login.templ
@@ -1,9 +1,8 @@
 package views
 
-templ loginForm() {
-	<div class="flex flex-col justify-center px-6 py-12 lg:px-8">
+templ login() {
+	<div class="flex flex-col justify-center px-6 py-12 lg:px-8 mt-20">
 		<div class="sm:mx-auto sm:w-full sm:max-w-sm">
-			<img class="mx-auto h-10 w-auto" src="https://tailwindui.com/img/logos/mark.svg?color=indigo&shade=500" alt="Your Company"/>
 			<h2 class="mt-10 text-center text-2xl font-bold leading-9 tracking-tight text-white">Iniciar Sesión</h2>
 		</div>
 	
