--- a/views/nav/navBar.templ
+++ b/views/nav/navBar.templ
@@ -1,7 +1,12 @@
 package views
 
-templ navBar() {
-	<nav class="bg-gray-800">
+const (
+  activeBtn = "bg-gray-900 text-white rounded-md px-3 py-2 text-sm font-medium"
+  inactiveBtn = "text-gray-300 hover:bg-gray-700 hover:text-white rounded-md px-3 py-2 text-sm font-medium"
+)
+
+templ NavBar() {
+	<nav class="bg-gray-800 flex-initial">
   <div class="mx-auto max-w-7xl px-2 sm:px-6 lg:px-8">
     <div class="relative flex h-16 items-center justify-between">
       <div class="absolute inset-y-0 left-0 flex items-center sm:hidden">
@@ -28,16 +33,13 @@ templ navBar() {
         </button>
       </div>
       <div class="flex flex-1 items-center justify-center sm:items-stretch sm:justify-start">
-        <div class="flex flex-shrink-0 items-center">
-          <img class="h-8 w-auto" src="https://tailwindui.com/img/logos/mark.svg?color=indigo&shade=500" alt="Your Company"/>
-        </div>
         <div class="hidden sm:ml-6 sm:block">
           <div class="flex space-x-4">
             <!-- Current: "bg-gray-900 text-white", Default: "text-gray-300 hover:bg-gray-700 hover:text-white" -->
-            <a href="#" class="bg-gray-900 text-white rounded-md px-3 py-2 text-sm font-medium">Dashboard</a>
-            <a href="#" class="text-gray-300 hover:bg-gray-700 hover:text-white rounded-md px-3 py-2 text-sm font-medium">Team</a>
-            <a href="#" class="text-gray-300 hover:bg-gray-700 hover:text-white rounded-md px-3 py-2 text-sm font-medium">Projects</a>
-            <a href="#" class="text-gray-300 hover:bg-gray-700 hover:text-white rounded-md px-3 py-2 text-sm font-medium">Calendar</a>
+            <a href="/" class={inactiveBtn}>Home</a>
+            <a href="/tasks" class={activeBtn}>Tasks</a>
+            // <a href="#" class="text-gray-300 hover:bg-gray-700 hover:text-white rounded-md px-3 py-2 text-sm font-medium">Projects</a>
+            // <a href="#" class="text-gray-300 hover:bg-gray-700 hover:text-white rounded-md px-3 py-2 text-sm font-medium">Calendar</a>
           </div>
         </div>
       </div>
@@ -71,7 +73,7 @@ templ navBar() {
               From: "transform opacity-100 scale-100"
               To: "transform opacity-0 scale-95"
           -->
-					@userMenu()
+					@UserMenu()
           @showMenu()
         </div>
       </div>
