Added tasks crud enpoints and updates from server
Added interactivity on tasks page. Now we can add, delete and edit tasks. The page data is updated on requests made

--- a/views/index.templ
+++ b/views/index.templ
@@ -10,7 +10,10 @@ templ Index() {
 	<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 	<title>HTMX Go</title>
 	<link href="/static/index.css" rel="stylesheet" />
+	<link href="/static/transitions.css" rel="stylesheet" />
+	<link rel="icon" type="image/png" href="/favicon.png" />
 	<script src="/static/htmx.js" type="text/javascript"></script>
+	<script src="/static/remove-me.js"></script>
 </head>
 <body class="h-full">
 	<div class="flex flex-col h-full">
