--- a/views/nav/navBar.templ
+++ b/views/nav/navBar.templ
@@ -32,6 +32,9 @@ templ NavBar() {
           </svg>
         </button>
       </div>
+        <div class="flex flex-shrink-0 items-center">
+          <img class="h-11 w-auto lg:block" src="/assets/machine-lg.png" alt="Your Company" />
+        </div>
       <div class="flex flex-1 items-center justify-center sm:items-stretch sm:justify-start">
         <div class="hidden sm:ml-6 sm:block">
           <div class="flex space-x-4">
