--- a/views/tasks/form.templ
+++ b/views/tasks/form.templ
@@ -1,17 +1,18 @@
 package views 
 
-templ form(){
-	  <form>
-    <input
-      id="title"
-      name="title"
-      class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 mt-5"
-    />
-    <button
-      type="submit"
-      class="text-white bg-indigo-500 hover:bg-indigo-400 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-500 font-medium rounded-lg text-sm px-5 py-2.5 focus:outline-none mt-2.5 text-center inline-flex items-center"
-    >
-      Agregar Tarea
-    </button>
-  </form>
+templ Form(){
+<form hx-post="/tasks" hx-swap="outerHTML transition:true">
+  <input
+    id="title"
+    name="title"
+    class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 mt-5"
+  />
+  <button
+    type="submit"
+    class="text-white bg-indigo-500 hover:bg-indigo-400 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-500 font-medium rounded-lg text-sm px-5 py-2.5 focus:outline-none mt-2.5 text-center inline-flex items-center"
+  >
+    Agregar Tarea
+  </button>
+</form>
+<div class="h-10 my-5" hx-swap-oob="true" id="task-response"></div>
 }
