--- a/views/tasks/tasks.templ
+++ b/views/tasks/tasks.templ
@@ -6,22 +6,32 @@ import (
   "github.com/xV0lk/htmx-go/views"
 )
 
-templ Tasks(tasks types.Tasks) {
+templ Tasks(tasks types.Tasks, oob bool) {
   @views.Index(){
     <div class="flex justify-center items-center">
     	// TODO: add responsive media queries for the with of the container
       <div class="w-5/6 md:w-3/4 lg:w-1/2 xl:w-3/5 2xl:w-2/5">
-        @Counter(tasks)
-        @form()
+        @Counter(tasks, oob)
+        @Form()
+        @TaskList(tasks, oob)
       </div>
     </div>
   }
 }
 
-templ Counter(tasks types.Tasks) {
-<div class="flex flex-col justify-center items-center pt-10 text-center">
+templ Counter(tasks types.Tasks, oob bool) {
+<div 
+  id="counter" 
+  class="flex flex-col justify-center items-center pt-10 text-center"
+  if oob {
+    hx-swap-oob="true"
+  }
+>
   <div class="flex justify-between text-xl w-full">
-    <p class="text-white py-5" id="total">Tareas totales: {strconv.Itoa(tasks.Count)}</p>
+    <p 
+      class="text-white py-5" 
+      id="total" 
+    >Tareas totales: {strconv.Itoa(tasks.Count)}</p>
     <p class="text-white py-5" id="completed">Tareas completadas: {strconv.Itoa(tasks.CompletedCount)}</p>
   </div>
 </div>
