Refactor tasks responses
Added Toast for status notifications improoved responses from server and overall user experience

--- a/views/tasks/task.templ
+++ b/views/tasks/task.templ
@@ -8,7 +8,7 @@ import (
 
 templ TaskList(tasks types.Tasks, oob bool ) {
   <div 
-  class="p-0"
+  class="py-8"
   id="tasks-list" 
   if oob {
     hx-swap-oob="true"
@@ -25,7 +25,7 @@ templ Task(item types.Item, editing bool) {
   id={fmt.Sprintf("task-%d", item.ID)}
   class={"flex items-center justify-between rounded-lg px-4 my-3 py-2.5 transition", 
           templ.KV("bg-emerald-200", item.Completed),
-          templ.KV("bg-indigo-50", !item.Completed),
+          templ.KV("bg-white", !item.Completed),
         }>
   <div class="flex items-center flex-auto space-x-2.5">
     <button type="button" class="cursor-move text-gray-500 hover:text-gray-700 handle">
@@ -39,7 +39,8 @@ templ Task(item types.Item, editing bool) {
       class="flex items-center justify-between w-full"
       hx-put={fmt.Sprintf("/tasks/%d", item.ID)}
       hx-target={fmt.Sprintf("#task-%d", item.ID)}
-      hx-swap="outerHTML"
+      hx-target-error="#toast-notification"
+      hx-swap="outerHTML transition:true"
       >
         <input name="title" value={item.Title}
         class={"border border-gray-300 text-gray-900 rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full px-2.5 py-1.5",
@@ -62,7 +63,7 @@ templ Task(item types.Item, editing bool) {
     <button 
       hx-delete={fmt.Sprintf("/tasks/%d", item.ID)}
       hx-target={fmt.Sprintf("#task-%d", item.ID)}
-      hx-swap="outerHTML" 
+      hx-swap="outerHTML transition:true"
       type="button"
       class="text-red-500 hover:text-red-700"
     >
