--- a/views/index.templ
+++ b/views/index.templ
@@ -11,14 +11,17 @@ templ Index() {
 	<title>HTMX Go</title>
 	<link href="/static/index.css" rel="stylesheet" />
 	<link href="/static/transitions.css" rel="stylesheet" />
+	<link href="/static/validation.css" rel="stylesheet" />
 	<link rel="icon" type="image/png" href="/favicon.png" />
 	<script src="/static/htmx.js" type="text/javascript"></script>
 	<script src="/static/remove-me.js"></script>
+	<script src="https://unpkg.com/htmx.org/dist/ext/response-targets.js"></script>
 </head>
 <body class="h-full">
-	<div class="flex flex-col h-full">
+	<div class="flex flex-col h-full" hx-ext="response-targets">
 	@views.NavBar()
 	{children...}
+	@ToastEl(ToastBody{}, false)
 	</div>	
 </body>
 </html>
