--- a/views/index.templ
+++ b/views/index.templ
@@ -12,7 +12,7 @@ templ Index() {
 	<link href="/static/index.css" rel="stylesheet" />
 	<link href="/static/transitions.css" rel="stylesheet" />
 	<link href="/static/validation.css" rel="stylesheet" />
-	<link rel="icon" type="image/png" href="/favicon.png" />
+	<link rel="icon" type="image/png" href="/assets/favicon.png" />
 	<script src="/static/htmx.js" type="text/javascript"></script>
 	<script src="/static/remove-me.js"></script>
 	<script src="https://unpkg.com/htmx.org/dist/ext/response-targets.js"></script>
