Implemented chi instead of echo
Redesigned the hole app to use chi instead of echo because of bad compatibility with std lib implemented better middleware passing translations and decoder in the context

--- a/views/home.templ
+++ b/views/home.templ
@@ -1,7 +1,9 @@
 package views
 
-templ HomePage(){
+import "github.com/xV0lk/htmx-go/internal/middleware"
+
+templ HomePage(l *middleware.Localizer){
 	@Index(){
-		@login()
+		@login(l)
 	}
 }
