--- a/views/login.templ
+++ b/views/login.templ
@@ -1,34 +1,40 @@
 package views
 
-templ login() {
+import "github.com/xV0lk/htmx-go/internal/middleware"
+
+templ login(l *middleware.Localizer) {
 	<div class="flex flex-col justify-center px-6 py-12 lg:px-8 mt-20">
 		<div class="sm:mx-auto sm:w-full sm:max-w-sm">
-			<h2 class="mt-10 text-center text-2xl font-bold leading-9 tracking-tight text-white">Iniciar Sesión</h2>
+			<h2 class="mt-10 text-center text-2xl font-bold leading-9 tracking-tight text-white">{l.Translate("Iniciar Sesión")}
+			</h2>
 		</div>
-	
+
 		<div class="mt-10 sm:mx-auto sm:w-full sm:max-w-sm">
-			<form class="space-y-6" action="#" method="POST">
+			<form class="space-y-6" hx-post="/login" hx-swap="outerHTML">
 				<div>
-					<label for="email" class="block text-sm font-medium leading-6 text-white">Email</label>
+					<label for="email" class="block text-sm font-medium leading-6 text-white">{l.Translate("Email")}</label>
 					<div class="mt-2">
-						<input id="email" name="email" type="email" autocomplete="email" required class="block w-full rounded-md border-0 bg-white/5 py-1.5 text-white shadow-sm ring-1 ring-inset ring-white/10 focus:ring-2 focus:ring-inset focus:ring-indigo-500 sm:text-sm sm:leading-6"/>
+						<input id="email" name="email" type="email" autocomplete="email" required
+							class="block w-full rounded-md border-0 bg-white/5 py-1.5 text-white shadow-sm ring-1 ring-inset ring-white/10 focus:ring-2 focus:ring-inset focus:ring-indigo-500 sm:text-sm sm:leading-6" />
 					</div>
 				</div>
-	
-<div>
+				<div>
 					<div class="flex items-center justify-between">
-						<label for="password" class="block text-sm font-medium leading-6 text-white">Contraseña</label>
-						<div class="text-sm">
-							<a href="#" class="font-semibold text-indigo-400 hover:text-indigo-300">Olvidaste tu contraseña?</a>
-						</div>
+						<label for="password"
+							class="block text-sm font-medium leading-6 text-white">{l.Translate("Contraseña")}</label>
+						// <div class="text-sm">
+						// 	<a href="#" class="font-semibold text-indigo-400 hover:text-indigo-300">{l.Translate("Olvidaste tu contraseña?")}</a>
+						// </div>
 					</div>
 					<div class="mt-2">
-						<input id="password" name="password" type="password" autocomplete="current-password" required class="block w-full rounded-md border-0 bg-white/5 py-1.5 text-white shadow-sm ring-1 ring-inset ring-white/10 focus:ring-2 focus:ring-inset focus:ring-indigo-500 sm:text-sm sm:leading-6"/>
+						<input id="password" name="password" type="password" autocomplete="current-password" required
+							class="block w-full rounded-md border-0 bg-white/5 py-1.5 text-white shadow-sm ring-1 ring-inset ring-white/10 focus:ring-2 focus:ring-inset focus:ring-indigo-500 sm:text-sm sm:leading-6" />
 					</div>
 				</div>
-	
+
 				<div>
-					<button type="submit" class="flex w-full justify-center rounded-md bg-indigo-500 px-3 py-1.5 text-sm font-semibold leading-6 text-white shadow-sm hover:bg-indigo-400 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-500">Iniciar Sesión</button>
+					<button type="submit"
+						class="flex w-full justify-center rounded-md bg-indigo-500 px-3 py-1.5 text-sm font-semibold leading-6 text-white shadow-sm hover:bg-indigo-400 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-500">{l.Translate("Iniciar Sesión")}</button>
 				</div>
 			</form>
 		</div>
