changed sqlite for postgres database.
Added docker to run an instance of the DB, added basic users and studio tables

--- a/views/tasks/task.templ
+++ b/views/tasks/task.templ
@@ -20,7 +20,7 @@ templ TaskList(tasks types.Tasks, oob bool ) {
   </div>
 }
 
-templ Task(item types.Item, editing bool) {
+templ Task(item *types.Item, editing bool) {
 <div
   id={fmt.Sprintf("task-%d", item.ID)}
   class={"flex items-center justify-between rounded-lg px-4 my-3 py-2.5 transition", 
