--- a/views/home.templ
+++ b/views/home.templ
@@ -1,9 +1,8 @@
 package views
 
-import "github.com/xV0lk/htmx-go/internal/middleware"
 
-templ HomePage(l *middleware.Localizer){
+templ HomePage(){
 	@Index(){
-		@login(l)
+		@login()
 	}
 }
