--- a/views/tasks/tasks.templ
+++ b/views/tasks/tasks.templ
@@ -3,23 +3,23 @@ package views
 import (
   "github.com/xV0lk/htmx-go/types"
   "github.com/xV0lk/htmx-go/views"
-	"github.com/xV0lk/htmx-go/internal/middleware"
+  mw "github.com/xV0lk/htmx-go/internal/middleware"
 )
 
-templ Tasks(tasks types.Tasks, oob bool, l *middleware.Localizer) {
+templ Tasks(tasks types.Tasks, oob bool) {
   @views.Index(){
     <div class="flex justify-center items-center">
     	// TODO: add responsive media queries for the with of the container
       <div class="w-5/6 md:w-3/4 lg:w-1/2 xl:w-3/5 2xl:w-2/5">
-        @Counter(tasks, oob, l)
-        @Form(l)
+        @Counter(tasks, oob)
+        @Form()
         @TaskList(tasks, oob)
       </div>
     </div>
   }
 }
 
-templ Counter(tasks types.Tasks, oob bool, l *middleware.Localizer) {
+templ Counter(tasks types.Tasks, oob bool) {
 <div 
   id="counter" 
   class="flex flex-col justify-center items-center pt-10 text-center"
@@ -31,8 +31,8 @@ templ Counter(tasks types.Tasks, oob bool, l *middleware.Localizer) {
     <p 
       class="text-white py-5" 
       id="total" 
-    >{l.Translate("Tareas totales: %d", tasks.Count)}</p>
-    <p class="text-white py-5" id="completed">{l.Translate("Tareas completadas: %d", tasks.CompletedCount)}</p>
+    >{mw.Translate(ctx, "Tareas totales: %d", tasks.Count)}</p>
+    <p class="text-white py-5" id="completed">{mw.Translate(ctx, "Tareas completadas: %d", tasks.CompletedCount)}</p>
   </div>
 </div>
 }
