Feature: Add sessions to DB
Implemented session logic and saving the session token to the database

--- a/views/nav/navBar.templ
+++ b/views/nav/navBar.templ
@@ -39,8 +39,8 @@ templ NavBar() {
         <div class="hidden sm:ml-6 sm:block">
           <div class="flex space-x-4">
             <!-- Current: "bg-gray-900 text-white", Default: "text-gray-300 hover:bg-gray-700 hover:text-white" -->
-            <a href="/" class={inactiveBtn}>Home</a>
-            <a href="/tasks" class={activeBtn}>Tasks</a>
+            <a href="/" hx-push-url="true" class={inactiveBtn}>Home</a>
+            <a href="/tasks" hx-push-url="true" class={activeBtn}>Tasks</a>
             // <a href="#" class="text-gray-300 hover:bg-gray-700 hover:text-white rounded-md px-3 py-2 text-sm font-medium">Projects</a>
             // <a href="#" class="text-gray-300 hover:bg-gray-700 hover:text-white rounded-md px-3 py-2 text-sm font-medium">Calendar</a>
           </div>
