Feature: Session Middeware
Added a new middleware to set if there is a current session in the context. Added language buttons

--- a/assets/index.css
+++ b/assets/index.css
@@ -1082,6 +1082,11 @@ select {
   border-color: rgb(243 244 246 / var(--tw-divide-opacity));
 }
 
+.divide-gray-200 > :not([hidden]) ~ :not([hidden]) {
+  --tw-divide-opacity: 1;
+  border-color: rgb(229 231 235 / var(--tw-divide-opacity));
+}
+
 .overflow-hidden {
   overflow: hidden;
 }
