Feature: Added User middleware
Refactored code to use a user middleware, updated auth function so i wont generate a circular dependency. Updated template to get user

--- a/views/nav/userMenu.templ
+++ b/views/nav/userMenu.templ
@@ -1,8 +1,11 @@
 package views
 
+import "github.com/xV0lk/htmx-go/types"
+
 import (
   "fmt"
   mw "github.com/xV0lk/htmx-go/internal/middleware"
+  iCtx "github.com/xV0lk/htmx-go/internal/ctx"
   )
 
 templ UserMenu() {
@@ -28,7 +31,7 @@ templ UserMenu() {
         {mw.Translate(ctx, "Ingles")}
     </a>
   </div>
-  if ctx.Value("session").(bool) {
+  if iCtx.Value[types.User](ctx) != nil {
     <div class="py-1" role="none">
       <a href="#" hx-delete="/login" class="block px-4 py-2 text-sm text-gray-700" role="menuitem" tabindex="-1"
         hx-headers={fmt.Sprintf("{\"X-CSRF-Token\": \"%s\"}", ctx.Value("gorilla.csrf.Token").(string))}
