Feature: Password Reset
Added password reset functionality, refactor part of the code to use email service and password reset views. Improved toast types with constants

--- a/views/home/home.templ
+++ b/views/home/home.templ
@@ -14,8 +14,13 @@ templ HomeLogin(){
 }
 
 templ HomeUser(data []*types.Appointment) {
-	
 	@views.Index(){
 		@UserPage(data)
+	}
+}
+
+templ HomePasswordReset(email string) {
+	@views.Index(){
+		@l.PwReset(email)
 	}
 }
