--- a/views/home/login/password.templ
+++ b/views/home/login/password.templ
@@ -9,9 +9,9 @@ templ PassInput() {
 		<div class="flex items-center justify-between">
 			<label for="password"
 				class="block text-sm font-medium leading-6 text-white">{mw.Translate(ctx, "Contraseña")}</label>
-			// <div class="text-sm">
-			// 	<a href="#" class="font-semibold text-indigo-400 hover:text-indigo-300">{l.Translate("Olvidaste tu contraseña?")}</a>
-			// </div>
+			<div class="text-sm">
+				<a href="/forgot-password" hx-push-url="true" class="font-semibold text-indigo-400 hover:text-indigo-300">{mw.Translate(ctx, "Olvidaste tu contraseña?")}</a>
+			</div>
 		</div>
 		<div x-data="{ show: false }" class="relative mt-2 rounded-md shadow-sm">
 			<input 
