Feature: Password reset views
Created password reset views and interactivity

--- a/views/home/home.templ
+++ b/views/home/home.templ
@@ -24,3 +24,9 @@ templ HomePasswordReset(email string) {
 		@l.PwReset(email)
 	}
 }
+
+templ HomePasswordResetDone(token string) {
+	@views.Index(){
+		@l.ResetPassword(token)
+	}
+}
