--- a/views/home/login/login.templ
+++ b/views/home/login/login.templ
@@ -16,7 +16,7 @@ templ Login() {
 		</h2>
 	</div>
 
-	<div class="mt-10 sm:mx-auto sm:w-full sm:max-w-sm">
+	<div x-data="{email: ''}" class="mt-10 sm:mx-auto sm:w-full sm:max-w-sm">
 		<form
 			class="space-y-6"
 			hx-post="/login"
