--- a/views/home/login/password.templ
+++ b/views/home/login/password.templ
@@ -10,7 +10,11 @@ templ PassInput() {
 			<label for="password"
 				class="block text-sm font-medium leading-6 text-white">{mw.Translate(ctx, "Contraseña")}</label>
 			<div class="text-sm">
-				<a href="/forgot-password" hx-push-url="true" class="font-semibold text-indigo-400 hover:text-indigo-300">{mw.Translate(ctx, "Olvidaste tu contraseña?")}</a>
+				<a
+					x-bind:href="`/forgot-password${email ? '?email=' + email : ''}`"
+					hx-push-url="true"
+					class="font-semibold text-indigo-400 hover:text-indigo-300"
+				>{mw.Translate(ctx, "Olvidaste tu contraseña?")}</a>
 			</div>
 		</div>
 		<div x-data="{ show: false }" class="relative mt-2 rounded-md shadow-sm">
