Feature: Update project structure
Se actualiza la estructura del proyecto

--- a/views/home/appointments/list.templ
+++ b/views/home/appointments/list.templ
@@ -1,8 +1,8 @@
 package views
 
-import ("github.com/xV0lk/htmx-go/types")
+import ("github.com/xV0lk/htmx-go/models")
 
-templ AppointmentsList(appList []*types.Appointment) {
+templ AppointmentsList(appList []*models.Appointment) {
 <div
 	id="home"
 	hx-swap-oob="true"
