--- a/views/home/appointments/item.templ
+++ b/views/home/appointments/item.templ
@@ -3,9 +3,9 @@ package views
 import "strconv"
 import "fmt"
 
-import ("github.com/xV0lk/htmx-go/types")
+import ("github.com/xV0lk/htmx-go/models")
 
-templ AppointmenItem(app *types.Appointment) {
+templ AppointmenItem(app *models.Appointment) {
 	<li class="grid grid-cols-3 py-5 hover:bg-gray-50 sm:px-6">
 		<div class="flex flex-col justify-end pe-6 text-center">
 			<h3 class="text-4xl font-bold text-indigo-600">{strconv.Itoa(app.Day)}</h3>
