--- a/views/home/login/email.templ
+++ b/views/home/login/email.templ
@@ -6,7 +6,7 @@ import (
 
 templ EmailInput() {
 	<div>
-		<label for="email" class="block text-sm font-medium leading-6 text-white">{mw.Translate(ctx, "Email")}</label>
+		<label for="email" class="block text-sm font-medium leading-6 text-white">{mw.T(ctx, "Email")}</label>
 		<div class="mt-2">
 			<input
 				id="email"
