--- a/views/home/login/password.templ
+++ b/views/home/login/password.templ
@@ -8,13 +8,13 @@ templ PassInput() {
 	<div id="passwordInput">
 		<div class="flex items-center justify-between">
 			<label for="password"
-				class="block text-sm font-medium leading-6 text-white">{mw.Translate(ctx, "Contraseña")}</label>
+				class="block text-sm font-medium leading-6 text-white">{mw.T(ctx, "Contraseña")}</label>
 			<div class="text-sm">
 				<a
 					x-bind:href="`/forgot-password${email ? '?email=' + email : ''}`"
 					hx-push-url="true"
 					class="font-semibold text-indigo-400 hover:text-indigo-300"
-				>{mw.Translate(ctx, "Olvidaste tu contraseña?")}</a>
+				>{mw.T(ctx, "Olvidaste tu contraseña?")}</a>
 			</div>
 		</div>
 		<div x-data="{ show: false }" class="relative mt-2 rounded-md shadow-sm">
@@ -27,7 +27,7 @@ templ PassInput() {
 				class="block w-full rounded-md border-0 bg-white/5 py-1.5 text-white shadow-sm ring-1 ring-inset ring-white/10 focus:ring-2 focus:ring-inset focus:ring-indigo-500 sm:text-sm sm:leading-6" />
 			<div class="absolute inset-y-0 right-2 flex items-center">
 				<a class="text-indigo-300 font-bold text-xs cursor-pointer" @click="show = !show" >
-					{mw.Translate(ctx, "Ver")}
+					{mw.T(ctx, "Ver")}
 				</a>
 			</div>
 		</div>
