--- a/views/tasks/form.templ
+++ b/views/tasks/form.templ
@@ -17,7 +17,7 @@ templ Form(){
     type="submit"
     class="text-white bg-indigo-500 hover:bg-indigo-400 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-500 font-medium rounded-lg text-sm px-5 py-2.5 focus:outline-none mt-2.5 text-center inline-flex items-center"
   >
-    {mw.Translate(ctx, "Agregar Tarea")}
+    {mw.T(ctx, "Agregar Tarea")}
   </button>
 </form>
 }
