--- a/views/home/login/login.templ
+++ b/views/home/login/login.templ
@@ -1,7 +1,7 @@
 package views
 
 import (
-	mw "github.com/xV0lk/htmx-go/internal/middleware"
+	loc "github.com/xV0lk/htmx-go/internal/localizer"
 	"github.com/xV0lk/htmx-go/views"
 )
 
@@ -12,7 +12,7 @@ templ Login() {
 	class="flex flex-col justify-center px-6 py-12 lg:px-8 mt-20"
 >
 	<div class="sm:mx-auto sm:w-full sm:max-w-sm">
-		<h2 class="mt-10 text-center text-2xl font-bold leading-9 tracking-tight text-white">{mw.T(ctx, "Iniciar Sesión")}
+		<h2 class="mt-10 text-center text-2xl font-bold leading-9 tracking-tight text-white">{loc.T(ctx, "Iniciar Sesión")}
 		</h2>
 	</div>
 
@@ -29,7 +29,7 @@ templ Login() {
 			@PassInput()
 			<div>
 				<button type="submit"
-					class="flex w-full justify-center rounded-md bg-indigo-500 px-3 py-1.5 text-sm font-semibold leading-6 text-white shadow-sm hover:bg-indigo-400 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-500">{mw.T(ctx, "Iniciar Sesión")}</button>
+					class="flex w-full justify-center rounded-md bg-indigo-500 px-3 py-1.5 text-sm font-semibold leading-6 text-white shadow-sm hover:bg-indigo-400 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-500">{loc.T(ctx, "Iniciar Sesión")}</button>
 			</div>
 		</form>
 	</div>
