--- a/views/home/home.templ
+++ b/views/home/home.templ
@@ -1,10 +1,10 @@
 package views
 
-import "github.com/xV0lk/htmx-go/models"
+import "github.com/xV0lk/zibutatu/models"
 
 import (
-	l "github.com/xV0lk/htmx-go/views/home/login"
-	"github.com/xV0lk/htmx-go/views"
+	l "github.com/xV0lk/zibutatu/views/home/login"
+	"github.com/xV0lk/zibutatu/views"
 	)
 
 templ HomeLogin(){
