--- a/views/tasks/form.templ
+++ b/views/tasks/form.templ
@@ -1,8 +1,8 @@
 package views
 
 import (
-  "github.com/xV0lk/htmx-go/views"
-	loc "github.com/xV0lk/htmx-go/internal/localizer"
+  "github.com/xV0lk/zibutatu/views"
+	loc "github.com/xV0lk/zibutatu/internal/localizer"
 )
 
 templ Form(){
