--- a/views/home/login/pwReset.templ
+++ b/views/home/login/pwReset.templ
@@ -1,8 +1,8 @@
 package views
 
 import (
-	loc "github.com/xV0lk/htmx-go/internal/localizer"
-	"github.com/xV0lk/htmx-go/views"
+	loc "github.com/xV0lk/zibutatu/internal/localizer"
+	"github.com/xV0lk/zibutatu/views"
 )
 
 templ PwReset(email string) {
